--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <title> main </title>
+    <title> jour352 </title>
     </head>
     <body>
-
+ Journalism 352 landing page
     </body>
 </html>
