--- a/class/checkpoint1/resume.html
+++ b/class/checkpoint1/resume.html
@@ -6,10 +6,11 @@
     </head>
     <body>
         <!-- I built this myself! -->
+        <div class="name">
         <h1>Brittany Renee Mayes</h1>
-
+    </div>
         <div class="photo">
-        <img src="../img/brittany-castle.jpg" alt="Brittany Renee Mayes"/>
+        <img src="./img/brittany-castle.jpg" alt="Brittany Renee Mayes"/>
         </div>
 
         <div class="contact">
