--- a/class/checkpoint1/resume.html
+++ b/class/checkpoint1/resume.html
@@ -10,7 +10,7 @@
         <h1>Brittany Renee Mayes</h1>
     </div>
         <div class="photo">
-        <img src="./img/brittany-castle.jpg" alt="Brittany Renee Mayes"/>
+        <img src="../img/brittany-castle.jpg" alt="Brittany Renee Mayes"/>
         </div>
 
         <div class="contact">
