--- a/class/checkpoint1/resume.html
+++ b/class/checkpoint1/resume.html
@@ -10,7 +10,7 @@
         <h1>Brittany Renee Mayes</h1>
     </div>
         <div class="photo">
-        <img src="../img/brittany-castle.jpg" alt="Brittany Renee Mayes"/>
+        <img src="./img/brittany-castle.jpg" alt="Brittany Renee Mayes"/>
         </div>
 
         <div class="contact">
@@ -28,7 +28,7 @@
 
         <div class="bio">
         <p>
-            I'm a graphics reporter at the Washington Post. I am also an adjunct professor at The University of Maryland, College Park. I was raised by NPR Visuals, and I'm an alumna of the beautiful University of North Carolina at Chapel Hill.
+            I'm a <id="wapo"> graphics reporter at the Washington Post. </id> I am also an adjunct professor at The University of Maryland, College Park. I was raised by NPR Visuals, and I'm an alumna of the beautiful University of North Carolina at Chapel Hill.
         </p>
         <p>
             Recently, I've been thinking about: Processes, aspirational skills, fostering collaboration, hiring and organizational hierarchy. Talk to me about any of these!
@@ -44,7 +44,7 @@
         <h3>Graphics reporter</h3>
         <h4>The Washington Post</h4>
         <h5>June 2018 - Current</h5>
-        <p>I create graphics from scratch for print and online. To do this work, I coordinate with reporters, designers and editors. I also assist in hiring and management of interns and help review team processes and workflows.</p>
+        <p class="jobdescrip">I create graphics from scratch for print and online. To do this work, I coordinate with reporters, designers and editors. I also assist in hiring and management of interns and help review team processes and workflows.</p>
     </div>
 
         <div class="secondjob">
@@ -52,7 +52,7 @@
         <h3>Associate news apps developer</h3>
         <h4>NPR</h4>
         <h5>June 2016 - May 2018</h5>
-        <p>I built static and interactive news graphics, largely in d3.js. I scraped, collected and cleaned data to analyze and chart. Additionally, I built, maintained and ran app rigs. I coordinated internship hiring and management.</p>
+        <p class="jobdescrip">I built static and interactive news graphics, largely in d3.js. I scraped, collected and cleaned data to analyze and chart. Additionally, I built, maintained and ran app rigs. I coordinated internship hiring and management.</p>
         </div>
 
         <div class="thirdjob">
@@ -60,18 +60,23 @@
         <h3>Digital editor (Fellowship)</h3>
         <h4>New York Times Student Journalism Institute</h4>
         <h5>May 2018</h5>
-        <p>I structured web content, creating custom-built web pages on Wordpress. Additionally, I collected and analyzed census data and produced data visualizations for featured content in print and online.</p>
+        <p class="jobdescrip">I structured web content, creating custom-built web pages on Wordpress. Additionally, I collected and analyzed census data and produced data visualizations for featured content in print and online.</p>
         </div>
 
         <div class="education">
         <h2>Education</h2>
+    </div>
+
+    <div class="edu"
         <ul>
             <li>Bachelor of Arts, Media and Journalism, Minor in Women's and Gender Studies, The University of North Carolina at Chapel Hill, 2016</li>
         </ul>
-        </div>
+    </div>
 
         <div class="skills">
         <h2>Skills</h2>
+    </div>
+
         <ul>
             <li>HTML5 and CSS3</li>
             <li>Less / Sass</li>
