--- a/class/checkpoint1/resume.html
+++ b/class/checkpoint1/resume.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>Resume</title>
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="./css/styles.css">
     </head>
     <body>
         <!-- I built this myself! -->
@@ -14,12 +14,12 @@
         </div>
 
         <div class="contact">
-        <ul>
-            <li>brmayes@umd.edu</li>
-            <li><a href="https://www.linkedin.com/in/brittanymayes/" target="_blank">LinkedIn</a></li>
-            <li><a href="https://twitter.com/BritRenee_/" target="_blank">Twitter</a></li>
-            <li><a href="https://github.com/brmayes/" target="_blank">Github</a></li>
-        </ul>
+
+        <p>    brmayes@umd.edu </p>
+        <p>    <a href="https://www.linkedin.com/in/brittanymayes/" </p> target="_blank">LinkedIn</a>
+            <p> <a href="https://twitter.com/BritRenee_/" target="_blank">Twitter</a></p>
+    <p>       <a href="https://github.com/brmayes/" target="_blank">Github</a> </p>
+
         </div>
 
     <div class="title">
