--- a/class/checkpoint1/resume.html
+++ b/class/checkpoint1/resume.html
@@ -16,7 +16,7 @@
         <div class="contact">
 
         <p>    brmayes@umd.edu </p>
-        <p>    <a href="https://www.linkedin.com/in/brittanymayes/" </p> target="_blank">LinkedIn</a>
+        <p>    <a href="https://www.linkedin.com/in/brittanymayes/" </p>  LinkedIn</a>
             <p> <a href="https://twitter.com/BritRenee_/" target="_blank">Twitter</a></p>
     <p>       <a href="https://github.com/brmayes/" target="_blank">Github</a> </p>
 
