--- a/class/checkpoint1/resume.html
+++ b/class/checkpoint1/resume.html
@@ -15,10 +15,10 @@
 
         <div class="contact">
 
-        <p>    brmayes@umd.edu </p>
-        <p>    <a href="https://www.linkedin.com/in/brittanymayes/" </p>  LinkedIn</a>
-            <p> <a href="https://twitter.com/BritRenee_/" target="_blank">Twitter</a></p>
-    <p>       <a href="https://github.com/brmayes/" target="_blank">Github</a> </p>
+      brmayes@umd.edu
+         <a href="https://www.linkedin.com/in/brittanymayes/"  LinkedIn</a>
+             <a href="https://twitter.com/BritRenee_/" target="_blank">Twitter</a>
+      <a href="https://github.com/brmayes/" target="_blank">Github</a> 
 
         </div>
 
