--- a/class/checkpoint1/resume.html
+++ b/class/checkpoint1/resume.html
@@ -9,19 +9,20 @@
         <div class="name">
         <h1>Brittany Renee Mayes</h1>
     </div>
+    <div class="title">
+        <p><strong>Maker of graphics and thinker of processes</strong></p>
+    </div>
+
         <div class="photo">
         <img src="./img/brittany-castle.jpg" alt="Brittany Renee Mayes"/>
         </div>
 
         <div class="contact">
 
-      brmayes@umd.edu <a href="https://www.linkedin.com/in/brittanymayes/"  LinkedIn</a> <a href="https://twitter.com/BritRenee_/" target="_blank">Twitter</a> <a href="https://github.com/brmayes/" target="_blank">Github</a>
+      brmayes@umd.edu <a href="https://www.linkedin.com/in/brittanymayes/" target="_blank" LinkedIn </a> <a href="https://twitter.com/BritRenee_/" target="_blank">Twitter</a> <a href="https://github.com/brmayes/" target="_blank">Github</a>
 
         </div>
 
-    <div class="title">
-        <p><strong>Maker of graphics and thinker of processes</strong></p>
-    </div>
 
         <div class="bio">
         <p>
