--- a/class/checkpoint1/resume.html
+++ b/class/checkpoint1/resume.html
@@ -15,7 +15,7 @@
 
     <div class="contact">
 
-  brmayes@umd.edu <a href="https://www.linkedin.com/in/brittanymayes/" target="_blank" LinkedIn </a> <a href="https://twitter.com/BritRenee_/" target="_blank">Twitter</a> <a href="https://github.com/brmayes/" target="_blank">Github</a>
+  brmayes@umd.edu <a href="https://www.linkedin.com/in/brittanymayes/" target="_blank"> LinkedIn </a> <a href="https://twitter.com/BritRenee_/" target="_blank">Twitter</a> <a href="https://github.com/brmayes/" target="_blank">Github</a>
 
     </div>
 
