--- a/class/checkpoint1/resume.html
+++ b/class/checkpoint1/resume.html
@@ -6,9 +6,9 @@
     </head>
     <body>
         <!-- I built this myself! -->
-        <div class="name">
+
         <h1>Brittany Renee Mayes</h1>
-    </div>
+
     <div class="title">
         <p> Maker of graphics and thinker of processes</p>
     </div>
@@ -26,7 +26,7 @@
 
         <div class="bio">
         <p>
-            I'm a <id="wapo"> graphics reporter at the Washington Post. </id> I am also an adjunct professor at The University of Maryland, College Park. I was raised by NPR Visuals, and I'm an alumna of the beautiful University of North Carolina at Chapel Hill.
+            I'm a <class="wapo"> graphics reporter at the Washington Post. </div> I am also an adjunct professor at The University of Maryland, College Park. I was raised by NPR Visuals, and I'm an alumna of the beautiful University of North Carolina at Chapel Hill.
         </p>
         <p>
             Recently, I've been thinking about: Processes, aspirational skills, fostering collaboration, hiring and organizational hierarchy. Talk to me about any of these!
