--- a/class/checkpoint1/resume.html
+++ b/class/checkpoint1/resume.html
@@ -40,25 +40,25 @@
         <div class="firstjob">
         <!-- First job -->
         <h3>Graphics reporter</h3>
-        <div class="jobplace"> <h4>The Washington Post</h4> </div>
-        <div class="jobdates"> <h5>June 2018 - Current</h5> </div>
-        <p class="jobdescrip">I create graphics from scratch for print and online. To do this work, I coordinate with reporters, designers and editors. I also assist in hiring and management of interns and help review team processes and workflows.</p>
+        <h4>The Washington Post</h4>
+         <h5>June 2018 - Current</h5>
+        I create graphics from scratch for print and online. To do this work, I coordinate with reporters, designers and editors. I also assist in hiring and management of interns and help review team processes and workflows.</p>
     </div>
 
         <div class="secondjob">
         <!-- Second job -->
         <h3>Associate news apps developer</h3>
-        <div class="jobplace"> <h4>NPR</h4> </div>
-        <div class="jobdates"> <h5>June 2016 - May 2018</h5> </div>
-        <p class="jobdescrip">I built static and interactive news graphics, largely in d3.js. I scraped, collected and cleaned data to analyze and chart. Additionally, I built, maintained and ran app rigs. I coordinated internship hiring and management.</p>
+        <h4>NPR</h4>
+         <h5>June 2016 - May 2018</h5>
+        <p> I built static and interactive news graphics, largely in d3.js. I scraped, collected and cleaned data to analyze and chart. Additionally, I built, maintained and ran app rigs. I coordinated internship hiring and management.</p>
         </div>
 
         <div class="thirdjob">
         <!-- Third job -->
         <h3>Digital editor (Fellowship)</h3>
-        <div class="jobplace"> <h4>New York Times Student Journalism Institute</h4> </div>
-        <div class="jobdates"> <h5>May 2018</h5> </div>
-        <p class="jobdescrip">I structured web content, creating custom-built web pages on Wordpress. Additionally, I collected and analyzed census data and produced data visualizations for featured content in print and online.</p>
+        <h4>New York Times Student Journalism Institute</h4>
+        <h5>May 2018</h5>
+        <p> I structured web content, creating custom-built web pages on Wordpress. Additionally, I collected and analyzed census data and produced data visualizations for featured content in print and online.</p
         </div>
 
         <div class="education">
