--- a/class/checkpoint1/resume.html
+++ b/class/checkpoint1/resume.html
@@ -15,7 +15,7 @@
 
     <div class="contact">
 
-  brmayes@umd.edu <a href="https://www.linkedin.com/in/brittanymayes/" target="_blank"> LinkedIn </a> <a href="https://twitter.com/BritRenee_/" target="_blank">Twitter</a> <a href="https://github.com/brmayes/" target="_blank">Github</a>
+  brmayes@umd.edu | <a href="https://www.linkedin.com/in/brittanymayes/" target="_blank"> LinkedIn </a> | <a href="https://twitter.com/BritRenee_/" target="_blank"> Twitter</a> | <a href="https://github.com/brmayes/" target="_blank">Github</a>
 
     </div>
 
@@ -67,7 +67,7 @@
 
     <div class="edu"
         <ul>
-            <li>Bachelor of Arts, Media and Journalism, Minor in Women's and Gender Studies, The University of North Carolina at Chapel Hill, 2016</li>
+            <li>Bachelor of Arts, Media and Journalism, Minor in Women's and Gender Studies, <i> The University of North Carolina at Chapel Hill, 2016</i> </li>
         </ul>
     </div>
 
