--- a/class/checkpoint1/resume.html
+++ b/class/checkpoint1/resume.html
@@ -7,7 +7,7 @@
     <body>
         <!-- I built this myself! -->
 
-        <h1>Brittany Renee Mayes</h1>
+        <h1>BRITTANY RENEE MAYES</h1>
 
     <div class="title">
         <p> Maker of graphics and thinker of processes</p>
