--- a/class/checkpoint1/resume.html
+++ b/class/checkpoint1/resume.html
@@ -20,9 +20,17 @@
     </div>
 
         <div class="photo">
-        <img src="./img/brittany-castle.jpg" alt="Brittany Renee Mayes"/>
-        <p> I'm a <id="wapo"> graphics reporter at the Washington Post. </id> I am also an adjunct professor at The University of Maryland, College Park. I was raised by NPR Visuals, and I'm an alumna of the beautiful University of North Carolina at Chapel Hill.</p>
-        <p> Recently, I've been thinking about: Processes, aspirational skills, fostering collaboration, hiring and organizational hierarchy. Talk to me about any of these!</p>
+        <img src="./img/brittany-castle.jpg" alt="Brittany Renee Mayes" />
+        </div>
+
+
+        <div class="bio">
+        <p>
+            I'm a <id="wapo"> graphics reporter at the Washington Post. </id> I am also an adjunct professor at The University of Maryland, College Park. I was raised by NPR Visuals, and I'm an alumna of the beautiful University of North Carolina at Chapel Hill.
+        </p>
+        <p>
+            Recently, I've been thinking about: Processes, aspirational skills, fostering collaboration, hiring and organizational hierarchy. Talk to me about any of these!
+        </p>
         </div>
 
         <div class="experience">
