--- a/class/checkpoint1/resume.html
+++ b/class/checkpoint1/resume.html
@@ -42,7 +42,7 @@
         <h3>Graphics reporter</h3>
         <h4>The Washington Post</h4>
          <h5>June 2018 - Current</h5>
-        I create graphics from scratch for print and online. To do this work, I coordinate with reporters, designers and editors. I also assist in hiring and management of interns and help review team processes and workflows.</p>
+        <p> I create graphics from scratch for print and online. To do this work, I coordinate with reporters, designers and editors. I also assist in hiring and management of interns and help review team processes and workflows.</p>
     </div>
 
         <div class="secondjob">
