--- a/class/checkpoint1/resume.html
+++ b/class/checkpoint1/resume.html
@@ -10,7 +10,7 @@
         <h1>BRITTANY RENEE MAYES</h1>
 
     <div class="title">
-        <p> Maker of graphics and thinker of processes</p>
+        Maker of graphics and thinker of processes
     </div>
 
     <div class="contact">
