--- a/class/checkpoint1/resume.html
+++ b/class/checkpoint1/resume.html
@@ -25,8 +25,7 @@
 
 
         <div class="bio">
-        <p>
-            I'm a <div id="wapo"> graphics reporter at the Washington Post. </div> I am also an adjunct professor at The University of Maryland, College Park. I was raised by NPR Visuals, and I'm an alumna of the beautiful University of North Carolina at Chapel Hill.
+        <p> I'm a <div id="wapo"> graphics reporter at the Washington Post. </div> I am also an adjunct professor at The University of Maryland, College Park. I was raised by NPR Visuals, and I'm an alumna of the beautiful University of North Carolina at Chapel Hill.
         </p>
         <p>
             Recently, I've been thinking about: Processes, aspirational skills, fostering collaboration, hiring and organizational hierarchy. Talk to me about any of these!
