--- a/class/menu-assignment/index.html
+++ b/class/menu-assignment/index.html
@@ -11,8 +11,8 @@
 <body>
     <p>From the kitchen of:</p>
     <!-- TODO: INSERT LOGO HERE -->
-    "<img src="logo.png" alt="logo">
-"
+    <img src="logo.png" alt="logo" width=20px> <!-- Width -->
+    
     <h2>The Event House</h2>
     <p>
         Beginning in 1928, this Art Deco landmark has been entertaining guests with its rich setting and unmistakable ambiance. From its origins as an avant-garde theater to the exquisite backdrop it provides for today's most memorable events, The
