--- a/class/menu-assignment/index.html
+++ b/class/menu-assignment/index.html
@@ -6,19 +6,22 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,400i,700,700i&display=swap" rel="stylesheet">
     <!-- TODO: LINK TO EXTERNAL STYLESHEET HERE -->
     <link rel="stylesheet" href="./css/styles.css">
+
 </head>
 
 <body>
-    <p>From the kitchen of:</p>
+    <div class="masthead">
+ <p id="from">From the kitchen of:</p>
     <!-- TODO: INSERT LOGO HERE -->
-    <img src="logo.png" alt="logo" width=20px> <!-- Width -->
-    
-    <h2>The Event House</h2>
-    <p>
+<id="logo">
+    <img src="logo.png" alt="logo" width=300px>
+</id>
+<h2>The Event House</h2>
+<p> <id="descrip">
         Beginning in 1928, this Art Deco landmark has been entertaining guests with its rich setting and unmistakable ambiance. From its origins as an avant-garde theater to the exquisite backdrop it provides for today's most memorable events, The
-        Redmoor has endured as the cornerstone of one of Cincinnati's premier districts. Where special things happen.
+        Redmoor has endured as the cornerstone of one of Cincinnati's premier districts. Where special things happen.</id>
     </p>
-
+</div>
     <!-- FOOD SECTION -->
     <!-- APPETIZERS -->
     <h3>Appetizers</h3>
@@ -31,12 +34,12 @@
     <p>
         Six shrimp in a chipotle marinade served with chipotle aioli
     </p>
-
+<div class="wings">
     <h5>Chicken Wings <span class="price">$8.50</span></h5>
     <p>
         Choice of hot, mild, BBQ, or teriyaki sauce served with celery and your choice of bleu cheese or Ranch dressing
     </p>
-
+</div>
     <h5>Pepperjack Cheese Bites <span class="price">$6</span></h5>
     <p>Lightly breaded pepperjack cheese served with Ranch dressing</p>
 
@@ -47,11 +50,11 @@
 
     <!-- SOUPS AND SALADS -->
     <h3>Soups and salads</h3>
-    <h5>Greek Salad <span class="price">$7</span></h5>
+    <div class="salad"> <h5>Greek Salad <span class="price">$7</span></h5>
     <p>
         Mixed greens, kalamata olives, tomatoes, cucumbers, onions, feta cheese, oregano, peperoncini, house made Greek dressing
     </p>
-
+</div>
     <h5>Caesar Salad <span class="price">$7</span></h5>
     <p>
         Romaine lettuce, aged parmigian oreggiano, house made Caesar dressing, and croutons
@@ -66,22 +69,22 @@
         <li>Add chicken $4.00</li>
         <li>Add shrimp $7.00</li>
     </ul>
-    <p>
+    <p id="add">
         Add a small Caesar, or small Greek salad to any meal for $4 or a House Salad for $3
     </p>
 
     <!-- PIZZAS -->
     <h3>House made pizzas</h3>
-    <h5>Smoked Chicken Pizza <span class="price">$10</span></h5>
+    <div class= "pizza"> <h5> Smoked Chicken Pizza <span class="price">$10</span> </h5>
     <p>
         Red sauce pizza topped with smoked chicken, roasted poblano peppers, red onions, and mozzarella cheese finished with a garlic puree
     </p>
-
-    <h5>Greek Pizza <span class="price">$10</span></h5>
+</div
+    <div= class= "greekpiz"> <h5> Greek Pizza <span class="price">$10</span></h5>
     <p>
         Olive oil, kalamata olives, red onions, mozzarella cheese, and feta cheese, topped with fresh tomatoes, oregano, and a garlic puree
     </p>
-
+</div>
     <h5>Italian Pizza <span class="price">$10</span></h5>
     <p>
         Red sauce pizza topped with sausage, pepperoni, onions, green peppers, and mozzarella cheese
@@ -108,6 +111,7 @@
     <p>Additional Toppings $1</p>
 
     <!-- SANDWICHES -->
+    <h3>Sandwiches</h3>
     <p>All sandwiches are served with housecut fries</p>
 
     <h5>Fish Sandwich <span class="price">$12</span></h5>
@@ -115,10 +119,10 @@
         On salted rye, grilled or fried Mahi Mahi with lettuce, tomato, and smoked tartar sauce
     </p>
 
-    <h5>Meatball Sandwich <span class="price">$9</span></h5>
+    <div class= "meatball"> <h5>Meatball Sandwich <span class="price">$9</span></h5>
     <p>
         On a fresh baked baguette, beef and pork meatballs, marinara, and shredded mozzarella
-    </p>
+    </p> </div>
 
     <h5>Cheesesteak Sandwich <span class="price">$11</span></h5>
     <p>
@@ -140,18 +144,18 @@
         On a fresh baked bun, half pound of angus beef topped with bacon, BBQ sauce, and cheddar cheese
     </p>
 
-    <h5>Black and Bleu Burger <span class="price">$10</span></h5>
+    <div class= "bbb"> <h5>Black and Bleu Burger <span class="price">$10</span></h5>
     <p>
         On a fresh baked bun, half pound of angus beef blackened and topped with bleu cheese crumbles, lettuce, and tomato
-    </p>
+    </p> </div>
 
     <!-- PASTAS -->
     <h3>Pastas</h3>
-    <h5>Redmoor Linguine <span class="price">$9</span></h5>
+    <div class= linguine> <h5>Redmoor Linguine <span class="price">$9</span></h5>
     <p>
         Linguine tossed with smoked bacon, diced tomatoes, light cream sauce, and parmigiano-reggiano
     </p>
-
+</div>
     <ul>
         <li>Add Chicken $4</li>
         <li>Add Shrimp $7</li>
@@ -175,14 +179,15 @@
     <h5>House-Cut Fries $4</h5>
 
     <!-- FOOTNOTES -->
-    <img alt="event space" src="https://media-api.xogrp.com/images/df79b6c4-494b-4159-8363-328649227274~rs_412.240">
-    <p>A $2.00 Split Plate Charge will be added when sharing an entree.</p>
+    <div class= "space"> <img alt="event space" src="https://media-api.xogrp.com/images/df79b6c4-494b-4159-8363-328649227274~rs_412.240" width=300px> </div>
+
+    <div class="bottom"> <p>A $2.00 Split Plate Charge will be added when sharing an entree.</p>
     <p>18% Gratuity will be added to parties of 8 or more.</p>
     <p>Consuming raw or undercooked meat or fish may pose an increased risk of foodborne illness.</p>
     <p>All Prices Subject to Change</p>
-    <p>Book your next big event at The Redmoor.</p>
+<p id="book"> Book your next big event at The Redmoor.</p>
     <p>Visit <a href="www.theredmoor.com">www.theredmoor.com</a> for the calendar of events and live music line up</p>
-
+</div>
     <!-- Inspired by https://www.theredmoor.com/resources/menus/Food%20Menu%20with%20text.pdf -->
 </body>
 
