--- a/class/menu-assignment/index.html
+++ b/class/menu-assignment/index.html
@@ -80,7 +80,7 @@
         Red sauce pizza topped with smoked chicken, roasted poblano peppers, red onions, and mozzarella cheese finished with a garlic puree
     </p>
 </div
-    <div= class= "greekpiz"> <h5> Greek Pizza <span class="price">$10</span></h5>
+    <div class= "greekpiz"> <h5> Greek Pizza <span class="price">$10</span></h5>
     <p>
         Olive oil, kalamata olives, red onions, mozzarella cheese, and feta cheese, topped with fresh tomatoes, oregano, and a garlic puree
     </p>
@@ -173,11 +173,11 @@
 
     <!-- SIDES -->
     <h3>Sides</h3>
-    <h5>Herb Roasted Potatoes $4</h5>
+    <div class= "sides"> <h5>Herb Roasted Potatoes $4</h5>
     <h5>Fresh Vegetable Medley $4</h5>
     <h5>Garlic Whipped Potatoes $4</h5>
     <h5>House-Cut Fries $4</h5>
-
+</div>
     <!-- FOOTNOTES -->
     <div class= "space"> <img alt="event space" src="https://media-api.xogrp.com/images/df79b6c4-494b-4159-8363-328649227274~rs_412.240" width=300px> </div>
 
