--- a/class/flexbox-exercises/flexbox-practice/index.html
+++ b/class/flexbox-exercises/flexbox-practice/index.html
@@ -12,6 +12,26 @@
         <meta name="description" content="Examples to follow for learning Flexbox.">
     </head>
     <body>
-        
+        <div class="flex-container">
+            <div class="lightpink"> </div>
+        </div>
+        <div class="flex-container">
+                <div class="darkpink"> </div>
+                <div class="darkpink"> </div>
+                <div class="darkpink"> </div>
+                <div class="darkpink"> </div>
+        </div>
+
+        <div class="flex-container">
+                <div class="lightblue"> </div>
+                <div class="lightblue"> </div>
+            </div>
+
+        <div class="flex-container">
+                <div class="green"> </div>
+                <div class="orange"> </div>
+            </div>
+
+
     </body>
 </html>
